overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ body{
 	width:50vw;
 	margin:auto;
 	margin-top:3vh;
+
 }
 /*
 @media screen and (max-width: 694px) {
@@ -134,6 +135,7 @@ body{
 	width:108vh;
 	margin-top: 5vh;
 }
+
 
 .bigScreenTransition {
 	-webkit-transition:margin-left 0.4s ease-in-out ;
@@ -307,6 +309,7 @@ path{
 	top:2vh;
 	width:2vh;
 	height:76vh;
+	overflow: hidden;
 }
 
 #rd{
